--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.ipynb filter=lfs diff=lfs merge=lfs -text
+pretrain_data_corpus.ipynb filter=lfs diff=lfs merge=lfs -text
